# RAP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: RAP Fields.docx  RAP_format.vsdx
src/rap/: padding_bit.h
src/rap/header/: header.h
src/rap/ura_code_section/: ura_code_section.h
src/rap_packer/: rap_packer.cpp  rap_packer.h
src/rap_packer/config_parser/: config_parser.cpp  config_parser.h
src/rap_packer/rap/: date.h
src/rap_packer/rap/header/: header.h
src/rap_packer/rap_info/: date.h  header_info.h  rap_info.h
src/rap_unpacker/: rap_unpacker.cpp  rap_unpacker.h
ura/: URA
ura/RRS_Receiver/: Configuration.cfg  ConfigurationDefault.cfg  Pids_Storage.txt
ura/RRS_Transmitter/: DopplerChannel.cfg  Pids_Storage.txt
